--- a/package.json
+++ b/package.json
@@ -107,8 +107,12 @@
     }
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "apollo-server-micro": "^2.25.1",
     "got": "^11.8.2",
+    "graphql": "^15.5.0",
     "jw-paginate": "^1.0.4",
+    "merge-graphql-schemas": "^1.7.8",
     "next": "10.2.3",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
