--- a/package.json
+++ b/package.json
@@ -1,110 +1,11 @@
 {
-  "name": "micro-services",
-  "version": "0.1.0",
+  "name": "@animeline/micro-services",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-emoji"
-    },
-    "cz-emoji": {
-      "types": [
-        {
-          "name": "feat",
-          "description": "A new feature",
-          "emoji": "✨",
-          "code": ":sparkles: feat:"
-        },
-        {
-          "name": "fix",
-          "description": "A bug Fix",
-          "emoji": "🐛",
-          "code": ":bug: fix:"
-        },
-        {
-          "name": "docs",
-          "description": "Documentation only changes",
-          "emoji": "📜",
-          "code": ":scroll: docs:"
-        },
-        {
-          "name": "style",
-          "description": "Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)",
-          "emoji": "🎨",
-          "code": ":art: style:"
-        },
-        {
-          "name": "refactor",
-          "description": "A code change that neither fixes a bug nor adds a feature package",
-          "emoji": "🔨",
-          "code": ":hammer: refactor:"
-        },
-        {
-          "name": "perf",
-          "description": "A code change that improves performance",
-          "emoji": "🚀",
-          "code": ":rocket: perf"
-        },
-        {
-          "name": "chore",
-          "description": "Other changes that don't modify src or test files",
-          "emoji": "💡",
-          "code": ":bulb: chore:"
-        },
-        {
-          "name": "revert",
-          "description": "Reverts a previous commit",
-          "emoji": "⏪",
-          "code": ":rewind: revert:"
-        },
-        {
-          "name": "test",
-          "description": "Adding missing tests or correcting existing tests",
-          "emoji": "🧪",
-          "code": ":test_tube: test:"
-        },
-        {
-          "name": "git",
-          "description": "Change in git file",
-          "emoji": "⭕",
-          "code": ":o: git: "
-        },
-        {
-          "name": "database",
-          "description": "Things about the database",
-          "emoji": "🗃️",
-          "code": ":card_box: database:"
-        },
-        {
-          "name": "ci",
-          "description": "Changes to our CI configuration files and scripts (example scopes: Travis, Circle, BrowserStack, SauceLabs)",
-          "emoji": "⚙️",
-          "code": ":gear: ci:"
-        },
-        {
-          "name": "deps",
-          "description": "Add dependencies to the project",
-          "emoji": "➕",
-          "code": ":heavy_plus_sign: deps:"
-        },
-        {
-          "name": "deps",
-          "description": "Remove dependencies in the project",
-          "emoji": "➖",
-          "code": ":heavy_minus_sign: deps:"
-        },
-        {
-          "name": "docker",
-          "description": "Docker stuff",
-          "emoji": "🐳",
-          "code": ":whale: docker:"
-        }
-      ]
-    }
   },
   "dependencies": {
     "@apollo/client": "3.3.20",
@@ -122,7 +23,6 @@
     "@types/node": "^15.6.1",
     "@types/node-fetch": "2.5.11",
     "@types/react": "17.0.14",
-    "cz-emoji": "^1.3.1",
     "typescript": "4.3.5"
   }
 }
