--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "jw-paginate": "^1.0.4",
     "next": "11.0.1",
     "react": "17.0.2",
